--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -22,7 +22,6 @@ jobs:
     - name: Initialize environment
       run: |
         sudo swapoff -a
-        sudo rm -f /swapfile
         sudo apt -yq update
         sudo apt -yq install asciidoc autoconf automake autopoint binutils build-essential bzip2 ccache curl device-tree-compiler ecj fastjar file flex g++ g++-multilib gawk gcc gcc-multilib gettext git gperf java-propose-classpath lib32gcc1 libc6-dev-i386 libelf-dev libglib2.0-dev libncurses5-dev libncursesw5-dev libreadline-dev libssl-dev libtool p7zip-full patch pkgconf python3 python3-pip python3-ply qemu-utils rsync scons squashfs-tools subversion swig tar time uglifyjs unzip wget xsltproc zlib1g-dev zstd
         sudo apt -yq clean
@@ -46,13 +45,13 @@ jobs:
 
     - name: Update & Install feeds
       run: |
-        cd $OPENWRT_PATH
+        cd ${OPENWRT_PATH}
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
     - name: Restore dl files
       run: |
-        cd $OPENWRT_PATH
+        cd ${OPENWRT_PATH}
         wget -q https://github.com/$GITHUB_REPOSITORY/releases/download/latest-x64/dl_cache.tar.zst && dlCacheState="exist"
         if [ "${dlCacheState}" = "exist" ]; then
           tar --zstd -xf dl_cache.tar.zst && rm -f dl_cache.tar.zst
@@ -64,7 +63,7 @@ jobs:
 
     - name: Customize
       run: |
-        cd $OPENWRT_PATH
+        cd ${OPENWRT_PATH}
         sed -i 's/192\.168\.1\.1/192\.168\.6\.1/g' ./package/base-files/files/bin/config_generate
         sed -i 's/\${host:-openwrt\.org}/img\.alicdn\.com/g' ./feeds/luci/modules/luci-mod-network/root/etc/uci-defaults/50_luci-mod-admin-full
         wget -q https://downloads.immortalwrt.org/releases/21.02-SNAPSHOT/targets/x86/64/packages/Packages.gz
@@ -75,22 +74,22 @@ jobs:
         sed -i "s/%D %V %C/ImmortalWrt 21.02 @${BUILD_DATE}/g" ./package/base-files/files/etc/openwrt_release
         if [ ${{ inputs.zju_localize }}x != "No"x ]; then
           mkdir -p ./files/etc/uci-defaults/
-          cp $MAIN_PATH/custom/zju_localize ./files/etc/uci-defaults/
+          cp ${MAIN_PATH}/custom/zju_localize ./files/etc/uci-defaults/
           mkdir -p ./files/etc/hotplug.d/iface/
-          cp $MAIN_PATH/custom/90-zjudown ./files/etc/hotplug.d/iface/
+          cp ${MAIN_PATH}/custom/90-zjudown ./files/etc/hotplug.d/iface/
           echo "Added localization for zju"
         fi
         rm ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
-        cp $MAIN_PATH/custom/*.jpg ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
-        cp $MAIN_PATH/configs/X64_config ./.config
+        cp ${MAIN_PATH}/custom/*.jpg ./feeds/luci/themes/luci-theme-argon/htdocs/luci-static/argon/img/bg1.jpg
+        cp ${MAIN_PATH}/configs/X64_config ./.config
         make defconfig
-        cp ./.config $MAIN_PATH/configs/new_all_X64_config
-        sh ./scripts/diffconfig.sh > $MAIN_PATH/configs/new_diff_X64_config
+        cp ./.config ${MAIN_PATH}/configs/new_all_X64_config
+        sh ./scripts/diffconfig.sh > ${MAIN_PATH}/configs/new_diff_X64_config
 
     - name: Diff config
       id: diff_config
       run: |
-        cd $MAIN_PATH/configs
+        cd ${MAIN_PATH}/configs
         if [ "$(diff -q new_all_X64_config all_X64_config)" != "" ]; then
           echo "::set-output name=state::changed"
           rm -f all_X64_config diff_X64_config
@@ -105,17 +104,17 @@ jobs:
       run: |
         git config user.name github-actions
         git config user.email github-actions@github.com
-        git add $MAIN_PATH/configs/all_X64_config $MAIN_PATH/configs/diff_X64_config
+        git add ${MAIN_PATH}/configs/all_X64_config ${MAIN_PATH}/configs/diff_X64_config
         git commit -m "Update config files"
         git push origin main
 
     - name: Build firmware
       run: |
-        cd $OPENWRT_PATH
+        cd ${OPENWRT_PATH}
         echo "Using $(($(nproc)+1)) threads to compile..."
         make -j $(($(nproc)+1)) download world
         if [ ${{ inputs.zju_localize }}x != "no"x ]; then
-          echo "RELEASE_BODY=\"Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M"), with zju localize\"" >> $GITHUB_ENV
+          echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M"), with zju localize" >> $GITHUB_ENV
         else
           echo "RELEASE_BODY=Firmware built at: $(date -d "8 hour" -u +"%Y-%m-%d %H:%M"), without zju localize" >> $GITHUB_ENV
         fi
@@ -130,10 +129,10 @@ jobs:
 
     - name: Manage releases and artifacts
       run: |
-        mv $OPENWRT_PATH/bin/targets/x86/64/* $RELEASES_PATH
-        mv $OPENWRT_PATH/dl $RELEASES_PATH
-        rm -rf $OPENWRT_PATH
-        cd $RELEASES_PATH
+        mv ${OPENWRT_PATH}/bin/targets/x86/64/* ${RELEASES_PATH}
+        mv ${OPENWRT_PATH}/dl ${RELEASES_PATH}
+        rm -rf ${OPENWRT_PATH}
+        cd ${RELEASES_PATH}
         du -h --max-depth=1
         tar -czf packages.tgz ./packages --remove-files
         tar --zstd -cf dl_cache.tar.zst ./dl --remove-files
