--- a/.github/workflows/Build-RM2100.yml
+++ b/.github/workflows/Build-RM2100.yml
@@ -44,7 +44,7 @@ jobs:
       run: |
         cd ${OPENWRT_PATH}
         wget -q https://github.com/$GITHUB_REPOSITORY/releases/download/latest-rm2100/dl_cache.tar.zst || dlCacheState="notExist"
-        if [ "${dlCacheState}" = "notExist" ]; then
+        if [ ${dlCacheState}x = "notExist"x ]; then
           echo "dl cache does not exist."
         else
           tar --zstd -xf dl_cache.tar.zst && rm -f dl_cache.tar.zst
