--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -91,22 +91,18 @@ jobs:
       run: |
         cd ${MAIN_PATH}/configs
         if [ "$(diff -q new_all_X64_config all_X64_config)" != "" ]; then
-          echo "::set-output name=state::changed"
           rm -f all_X64_config diff_X64_config
           mv new_all_X64_config all_X64_config
           mv new_diff_X64_config diff_X64_config
+          cd ${MAIN_PATH}
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add ${MAIN_PATH}/configs/all_X64_config ${MAIN_PATH}/configs/diff_X64_config
+          git commit -m "Update config files"
+          git push origin main
         else
           echo "Configs have not changed."
         fi
-
-    - name: Commit config files
-      if: steps.diff_config.outputs.state == 'changed'
-      run: |
-        git config user.name github-actions
-        git config user.email github-actions@github.com
-        git add ${MAIN_PATH}/configs/all_X64_config ${MAIN_PATH}/configs/diff_X64_config
-        git commit -m "Update config files"
-        git push origin main
 
     - name: Build firmware
       run: |
@@ -138,7 +134,7 @@ jobs:
         tar --zstd -cf dl_cache.tar.zst ./dl --remove-files
 
     - name: Upload to Releases
-      uses: ncipollo/release-action@v1.10.0
+      uses: ncipollo/release-action@v1
       with:
         name: latest x64 firmware
         tag: latest-x64
