fix path variable

--- a/.github/workflows/Build-X64.yml
+++ b/.github/workflows/Build-X64.yml
@@ -138,7 +138,7 @@ jobs:
         tar -czf packages.tgz ./packages --remove-files
         tar --zstd -cf dl_cache.tar.zst ./dl --remove-files
         echo "sha256sums is:"
-        cat {RELEASES_PATH}/sha256sums
+        cat ${RELEASES_PATH}/sha256sums
 
     - name: Upload to Releases
       uses: ncipollo/release-action@v1
